Mise à jour des informations

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!Doctype html>
+<!Doctype html lang="fr">
 
 <head>
 </script>
@@ -45,8 +45,6 @@
     <meta property="twitter:title" content="Dzénetan Massart">
     <meta property="twitter:description" content="Le site web de Dzénetan Massart">
     <meta property="twitter:image" content="root/ico//android-icon-192x192.png">
-
-
 </head>
 
 <body>
@@ -125,6 +123,9 @@
                 </li>
                 <li>
                     <a href="https://app.contrast-finder.org/?lang=fr">Contrast Finder</a>
+                </li>
+                <li>
+                    <a href="https://www.favicon-generator.org/">favicon-generator</a>
                 </li>
             </ul>
 
