--- a/portefolio.html
+++ b/portefolio.html
@@ -11,7 +11,6 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="full-screen" content="yes">
     <link rel="stylesheet" href="assets/navbar/navbar.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
     <!--Generate with https://www.favicon-generator.org/-->
     <link rel="apple-touch-icon" sizes="57x57" href="root/ico/apple-icon-57x57.png">
@@ -32,9 +31,6 @@
     <meta name="msapplication-TileImage" content="root/ico//ms-icon-144x144.png">
     <meta name="theme-color" content="#455DB3">
     <link rel="stylesheet" href="assets/css/porte-folio.css">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-
 </head>
 
 <body>
@@ -131,11 +127,11 @@
                 <div class="progress_bar">
                     <label for="gmpas">
                         <kbd>0</kbd>
-                        <span>7811</span>
+                        <span>9 819</span>
                         <kbd>15 000</kbd>
                     </label>
 
-<progress id="gmaps" max="15000" value="7811"></progress>
+<progress id="gmaps" max="15000" value="9819"></progress>
                 </div>
 <a href="https://www.google.com/maps/contrib/110579370211725205652/reviews/@50.4497567,4.7780214,13z/data=!3m1!4b1!4m3!8m2!3m1!1e1?authuser=0"
     target="_blank" rel="noopener noreferrer" class="lien">Voir le profil complet</a>
@@ -145,18 +141,24 @@
 <h2> <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="Icone LinkedIn" style="width:5vw; background-color: white;border-radius: 10%;"
     srcset="https://cdn-icons-png.flaticon.com/512/174/174857.png"> Profil LinkedIn</h2>
 <section class="LinkedIn">
-    <img src="https://media.licdn.com/dms/image/D4E35AQHy2PTHLft41Q/profile-framedphoto-shrink_200_200/0/1686839083409?e=1687960800&v=beta&t=KKu4_BUK--fU2Lzp1zNc1Tju6_1rAiMGo3kDHMvP7BY"
+        <img src="https://media.licdn.com/dms/image/D4E03AQFHbSObPoyVjA/profile-displayphoto-shrink_800_800/0/1676642151006?e=1703721600&v=beta&t=8NhQzdzDm-1RtN2g0Zjg_RY38B-CNyntplQmY4-L0RU"
         alt="Profil Dzénetan Massart"
-        srcset="https://media.licdn.com/dms/image/D4E35AQHy2PTHLft41Q/profile-framedphoto-shrink_200_200/0/1686839083409?e=1687960800&v=beta&t=KKu4_BUK--fU2Lzp1zNc1Tju6_1rAiMGo3kDHMvP7BY">
-    <h3>Dzénetan Massart</h3>
-<p>420 abonnés - 419 relations</p>
+        srcset="https://media.licdn.com/dms/image/D4E03AQFHbSObPoyVjA/profile-displayphoto-shrink_800_800/0/1676642151006?e=1703721600&v=beta&t=8NhQzdzDm-1RtN2g0Zjg_RY38B-CNyntplQmY4-L0RU">
+        <h3>Dzénetan Massart</h3>
+<p>482 abonnés - 475 relations</p>
 
     <a href="https://www.linkedin.com/in/dzenetan-massart/" class="lien" target="_blank" rel="noopener noreferrer">Voir le profil complet</a>
 </section>
 <!--La section Behance-->
 <h2> 
-    <img src="hhttps://a5.behance.net/409867d1b85129ac7d9775f71afaafc48451b85d/img/site/favicon.ico?cb=264615658" alt="Icone Behance" style="width:5vw; background-color: white;border-radius: 10%;"
-    srcset="https://a5.behance.net/409867d1b85129ac7d9775f71afaafc48451b85d/img/site/favicon.ico?cb=264615658"> Profil Behance
+    <svg alt="Icone Behance" style="width:5vw; border-radius: 10%;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24.247 15.985" aria-labelledby="IconBase-title-e35107a1-43b2-4a5a-a43c-b852ad4d30d9 IconBase-description-e35107a1-43b2-4a5a-a43c-b852ad4d30d9" role="graphics-symbol img" width="100%" height="100%" class="PrimaryNav-behanceLogo-jbj PrimaryNav-truncated-C4c" title="Behance" aria-hidden="true">
+        <title id="IconBase-title-e35107a1-43b2-4a5a-a43c-b852ad4d30d9">Behance</title>
+        <desc id="IconBase-description-e35107a1-43b2-4a5a-a43c-b852ad4d30d9"></desc><g><!--[--><g transform="translate(-55 -103)">
+            <path d="M7.017,0A8.12,8.12,0,0,1,8.965.2,4.348,4.348,0,0,1,10.47.844a2.97,2.97,0,0,1,.967,1.194,4.51,4.51,0,0,1,.345,1.849,3.548,3.548,0,0,1-.511,1.98,3.76,3.76,0,0,1-1.519,1.3A3.627,3.627,0,0,1,11.8,8.619a4.516,4.516,0,0,1,.677,2.519,4.652,4.652,0,0,1-.428,2.053,4,4,0,0,1-1.174,1.427,5.18,5.18,0,0,1-1.7.815,7.238,7.238,0,0,1-1.948.262H0V0ZM6.6,6.348a2.275,2.275,0,0,0,1.437-.437,1.709,1.709,0,0,0,.566-1.427,1.928,1.928,0,0,0-.18-.9,1.306,1.306,0,0,0-.5-.539,1.875,1.875,0,0,0-.718-.277,4.038,4.038,0,0,0-.843-.073H3.274V6.362H6.6Zm.18,6.682a3.847,3.847,0,0,0,.925-.1,2.22,2.22,0,0,0,.774-.335,1.663,1.663,0,0,0,.539-.626,2.218,2.218,0,0,0,.193-1.019,2.1,2.1,0,0,0-.649-1.732,2.639,2.639,0,0,0-1.713-.51H3.274V13.03Z" transform="translate(55 103)" fill="#FFFF"></path>
+        <path d="M101,36.468a2.585,2.585,0,0,0,1.92.684,2.528,2.528,0,0,0,1.547-.48,1.978,1.978,0,0,0,.787-1h2.611a5.142,5.142,0,0,1-1.92,2.926,5.339,5.339,0,0,1-3.122.888,5.9,5.9,0,0,1-2.307-.437,4.927,4.927,0,0,1-1.74-1.223,5.705,5.705,0,0,1-1.091-1.893,7.123,7.123,0,0,1-.387-2.417,6.989,6.989,0,0,1,.4-2.373,5.354,5.354,0,0,1,5.139-3.64,4.921,4.921,0,0,1,2.4.568,5.038,5.038,0,0,1,1.685,1.5,6.262,6.262,0,0,1,.953,2.155,8.491,8.491,0,0,1,.207,2.533h-7.777A3.094,3.094,0,0,0,101,36.468Zm3.412-5.969a2.154,2.154,0,0,0-1.671-.626,2.36,2.36,0,0,0-1.174.262,2.514,2.514,0,0,0-.746.626,2.409,2.409,0,0,0-.4.8,3.316,3.316,0,0,0-.138.742H105.1A3.267,3.267,0,0,0,104.414,30.5Z" transform="translate(-28.86 79.504)" fill="#FFFF"></path>
+        <rect width="6.036" height="1.543" transform="translate(70.802 104.048)" fill="#FFFF"></rect></g><!--]--></g>
+    </svg>
+Profil Behance
 </h2>
 
 <section class="BehanceProfil">
@@ -165,7 +167,7 @@
         srcset="https://mir-s3-cdn-cf.behance.net/user/230/c9c830681896223.642e6ea89d797.jpg">
     <h3>Dzénetan Massart</h3>
     <div>
-        <p>Nombre de vues des projets: 118 | Appréciations: 8 | Abonnés: 1 | Abonnements: 13 </p>
+        <p>Nombre de vues des projets: 133 | Appréciations: 8 | Abonnés: 1 | Abonnements: 14 </p>
     </div>
     <a href="https://www.behance.net/dzenetan-massart" class="lien" target="_blank" rel="noopener noreferrer">Voir la gallerie complete</a>
 </section>
