Amélioration des listes

--- a/index.html
+++ b/index.html
@@ -97,8 +97,10 @@
             <p>Depuis Novembre 2022, Dzénetan Massart est membre de la <a href="https://smartbe.be/fr/">Smart<sup><i class="fa-solid fa-link"></i></sup></a> pour les prestations.</p>
         </div>
         <div class="inline">
-            <ul class="logiciels ">
-                <span> <i class="fas fa-laptop"></i> Liste des logiciels et APIs que j'emplois pour créer ce site:</span>
+            <div class="logiciels ">
+            <span>Liste des logiciels et APIs que j'emplois pour créer ce site:</span>
+
+            <ul>
 
                 <li>
                     <a href="https://code.visualstudio.com/Download">Visual Studio Code</a>
@@ -128,10 +130,11 @@
                     <a href="https://www.favicon-generator.org/">favicon-generator</a>
                 </li>
             </ul>
+        </div>
+        <div  class="technologies ">
+            <span> Liste des langages que j'emplois pour créer ce site:</span>
 
-
-            <ul class="technologies ">
-                <span> <i class="fas fa-laptop-code"></i> Liste des langages que j'emplois pour créer ce site:</span>
+            <ul>
                 <li>
                     Français
                 </li>
@@ -154,9 +157,11 @@
                     JS
                 </li>
             </ul>
+        </div>
+        <div class="capacites ">
+            <span> Liste des capacités que je peux vous proposer</span>
 
-            <ul class="capacites ">
-                <span> <i class="fas fa-briefcase"></i> Liste des capacités que je peux vous proposer</span>
+            <ul >
 
                 <li title="J'utilise donc Adobe Premiere et Adobe After Effect principalement">
                     Montage-vidéo
@@ -219,9 +224,10 @@
                     Rédaction<sup>(Employé de Services)</sup>
                     </li>
             </ul>
-            <ul class="programmes ">
-                <span> <i class="fas fa-pencil-ruler"></i> Liste des logiciels que j'emplois</span>
-
+        </div>
+        <div class="programmes" >
+            <span>Liste des logiciels que j'emplois</span>
+            <ul>
                 <li>
                     Adobe Premiere Pro CS6 <sup>(amélioré avec des scripts)</sup>
                 </li>
@@ -280,6 +286,7 @@
                     Canva
                  </li>
             </ul>
+        </div>
         </div>
 
         </div>
