Utilisation d'un manifest

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="root/ico//favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="root/ico//favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="root/ico//favicon-16x16.png">
-    <link rel="manifest" href="root/ico//manifest.json">
+    <link rel="manifest" href="manifest.json">
     <meta name="msapplication-TileColor" content="#455DB3">
     <meta name="msapplication-TileImage" content="root/ico//ms-icon-144x144.png">
     <meta name="theme-color" content="#455DB3">
@@ -87,7 +87,6 @@
 <!--Le main Debut-->
 
     <main >
-
         <h1>Bienvenue sur le site de Dzénetan Massart !</h1>
         <div class="intro ">
             <p>Ce site a été créé pendant <a href="https://becode.org/fr/" title="Renseignez-vous">la formation "BeCode"<sup><i class="fa-solid fa-link"></i></sup></a> et sert à tester les différentes capacités apprises lors de la formation par Dzénetan
@@ -101,7 +100,6 @@
             <span>Liste des logiciels et APIs que j'emplois pour créer ce site:</span>
 
             <ul>
-
                 <li>
                     <a href="https://code.visualstudio.com/Download">Visual Studio Code</a>
                 </li>
@@ -160,9 +158,7 @@
         </div>
         <div class="capacites ">
             <span> Liste des capacités que je peux vous proposer</span>
-
             <ul >
-
                 <li title="J'utilise donc Adobe Premiere et Adobe After Effect principalement">
                     Montage-vidéo
                 </li>
@@ -288,7 +284,6 @@
             </ul>
         </div>
         </div>
-
         </div>
     </main>
     <!--Le main FIN-->
