--- a/portefolio.html
+++ b/portefolio.html
@@ -127,11 +127,11 @@
                 <div class="progress_bar">
                     <label for="gmpas">
                         <kbd>0</kbd>
-                        <span>9 819</span>
+                        <span>10223</span>
                         <kbd>15 000</kbd>
                     </label>
 
-<progress id="gmaps" max="15000" value="9819"></progress>
+<progress id="gmaps" max="15000" value="10223"></progress>
                 </div>
 <a href="https://www.google.com/maps/contrib/110579370211725205652/reviews/@50.4497567,4.7780214,13z/data=!3m1!4b1!4m3!8m2!3m1!1e1?authuser=0"
     target="_blank" rel="noopener noreferrer" class="lien">Voir le profil complet</a>
