Mise à jour de Janvier 2024

--- a/portefolio.html
+++ b/portefolio.html
@@ -44,6 +44,8 @@
 <ul>
     <li><a href="CV/community_manager.html" alt="CV de Community Manager">🌐<span>Community Manager</span></a>
 </li>
+<li><a href="CV/employé_de_services.html" alt="CV d'Employé de Services">💻​<span>Employé de Services</span></a>
+</li>
     <li><a href="portefolio.html" alt="portefolio">📚<span>Portefolio</span></a>
 </li>
 </ul>
@@ -127,11 +129,11 @@
                 <div class="progress_bar">
                     <label for="gmpas">
                         <kbd>0</kbd>
-                        <span>11 175</span>
+                        <span>11 504</span>
                         <kbd>15 000</kbd>
                     </label>
 
-<progress id="gmaps" max="15000" value="11175"></progress>
+<progress id="gmaps" max="15000" value="11504"></progress>
                 </div>
 <a href="https://www.google.com/maps/contrib/110579370211725205652/reviews/@50.4497567,4.7780214,13z/data=!3m1!4b1!4m3!8m2!3m1!1e1?authuser=0"
     target="_blank" rel="noopener noreferrer" class="lien">Voir le profil complet</a>
@@ -141,11 +143,11 @@
 <h2> <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="Icone LinkedIn" style="width:5vw; background-color: white;border-radius: 10%;"
     srcset="https://cdn-icons-png.flaticon.com/512/174/174857.png"> Profil LinkedIn</h2>
 <section class="LinkedIn">
-        <img src="https://media.licdn.com/dms/image/D4E35AQHy2PTHLft41Q/profile-framedphoto-shrink_200_200/0/1686839083668?e=1704679200&v=beta&t=Z1fM4ur3T_7R8U4s7zBzO3xJukaRpKWBkcoEEpM0_IQ"
+        <img src="https://media.licdn.com/dms/image/D4E35AQHy2PTHLft41Q/profile-framedphoto-shrink_200_200/0/1686839083668?e=1706778000&v=beta&t=38laQODNu1heOExiAHWO-u7Z_orvpqPmwzJvlvCPxIw"
         alt="Profil Dzénetan Massart"
-        srcset="https://media.licdn.com/dms/image/D4E35AQHy2PTHLft41Q/profile-framedphoto-shrink_200_200/0/1686839083668?e=1704679200&v=beta&t=Z1fM4ur3T_7R8U4s7zBzO3xJukaRpKWBkcoEEpM0_IQ">
+        srcset="https://media.licdn.com/dms/image/D4E35AQHy2PTHLft41Q/profile-framedphoto-shrink_200_200/0/1686839083668?e=1706778000&v=beta&t=38laQODNu1heOExiAHWO-u7Z_orvpqPmwzJvlvCPxIw">
         <h3>Dzénetan Massart</h3>
-<p>539 abonnés - 522 relations</p>
+<p>559 abonnés - 546 relations</p>
 
     <a href="https://www.linkedin.com/in/dzenetan-massart/" class="lien" target="_blank" rel="noopener noreferrer">Voir le profil complet</a>
 </section>
@@ -167,7 +169,7 @@ Profil Behance
         srcset="https://mir-s3-cdn-cf.behance.net/user/230/c9c830681896223.642e6ea89d797.jpg">
     <h3>Dzénetan Massart</h3>
     <div>
-        <p>Nombre de vues des projets: 133 | Appréciations: 8 | Abonnés: 1 | Abonnements: 14 </p>
+        <p>Nombre de vues des projets: 140 | Appréciations: 8 | Abonnés: 1 | Abonnements: 14 </p>
     </div>
     <a href="https://www.behance.net/dzenetan-massart" class="lien" target="_blank" rel="noopener noreferrer">Voir la gallerie complete</a>
 </section>
