--- a/CV/employé_de_services.html
+++ b/CV/employé_de_services.html
@@ -5,7 +5,7 @@
     <meta lang="fr">
     <title>Dzénetan Massart-Le site</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Le CV de Dzénetan Massart pour le poste de Community Manager" />
+    <meta name="description" content="Le CV de Dzénetan Massart pour le poste d'Employé de Services" />
     <meta name="keywords" content="CV,Dzénetan,Massart,vidéo,gif,applications,Employé de Service,Community Manager" />
     <meta name="author" content="Dzénetan Massart" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -37,17 +37,17 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://dzenetanmassart.github.io/cv/community manager.html">
     <meta property="og:title" content="Dzénetan Massart - Community Manager">
-    <meta property="og:description" content="Le CV de Dzénetan Massart pour le poste de Community Manager">
+    <meta property="og:description" content="Le CV de Dzénetan Massart pour le poste de d'Employé de Services">
     <meta property="og:image" content="../root/ico//android-icon-192x192.png">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://dzenetanmassart.github.io/cv/community manager.html">
     <meta property="twitter:title" content="Dzénetan Massart - Community Manager">
-    <meta property="twitter:description" content="Le CV de Dzénetan Massart pour le poste de Community Manager">
+    <meta property="twitter:description" content="Le CV de Dzénetan Massart pour le poste d'Employé de Services">
     <meta property="twitter:image" content="../root/ico//android-icon-192x192.png">
 
     <!--Pour le CV-->
-        <link rel="stylesheet" type="text/css" href="../assets/cv/CV_CSS/CM.css">
+        <link rel="stylesheet" type="text/css" href="../assets/cv/CV_CSS/EdS.css">
 
 </head>
 <body>
@@ -91,18 +91,8 @@
 <!--Le main Debut-->
         <main>
 <section class="TitreCV">
-    <h1>Community Manager</h1>
+    <h1>Employé de Services</h1>
     <h2>Dzénetan MASSART</h2>
-</section>
-<section class="slogan">
-    <svg width="400" height="100" xmlns="http://www.w3.org/2000/svg" version="1.1">
-
-        <g>
-         <title>"Soyons tous accessibles sur le web"</title>
-         <path stroke="#000000" id="svg_1" fill="white" stroke-linejoin="round" d="m29.16703,97.08834l36.79983,-25.29599c-23.25876,-5.49284 -64.67848,-14.16576 -64.04126,-30.35519c-0.34251,-24.41359 109.66231,-39.74625 195.46919,-39.46175c114.06352,-0.04818 200.40768,17.9722 200.24838,39.3172c-0.1593,28.90971 -133.65823,47.70102 -270.02466,37.72717l-98.45148,18.06857z"/>
-         <text font-weight="bold" transform="matrix(0.995215 0 0 1.44078 30.4649 -212.772)" stroke="#000" xml:space="preserve" text-anchor="start" font-family="Noto Sans JP" font-size="24" id="svg_2" y="185.40795" x="-16.37984" stroke-width="0" fill="#000000">"Soyons tous accessibles sur le web"</text>
-        </g>
-       </svg>
 </section>
 <section class="Competences">
     <h3>Compétences</h3>
@@ -144,16 +134,12 @@
 <section class="Connaissances_informatiques">
         <h3>Connaissances informatiques</h3>
 <ul>
-    <li>Word</li>
-    <li>Excel</li>
-    <li>Google Analytics</li>
-    <li>Photoshop</li>
-    <li>PowerPoint</li>
-    <li>YouTube</li>
-    <li>Twitter</li>
-    <li>Facebook</li>
-    <li>LinkedIn</li>
-    <li>Discord</li>
+    <li>Microsoft Word</li>
+    <li>Microsoft Excel</li>
+    <li>Microsoft PowerPoint</li>
+    <li>Google Docs</li>
+    <li>Google Sheets</li>
+    <li>LibreOffice</li>
 </ul>
 </section>
 <section class="Etudes">
@@ -172,8 +158,10 @@
 <section class="Experiences_professionnelles">
         <h3>Expériences professionnelles</h3>
 <ul>
+    <li> <b>Stagiaire Administratif</b> – École Maternelle du Séminaire de Floreffe – Floreffe - (Septembre 2023)</li>
     <li> <b>Web Manager</b> – Le Joyeux Carnavaleux – Namur - (2023)</li>
-    <li> <b>Web Manager</b> – Récréation de Fran – Floreffe - (2022)</li>
+    <li> <b>Stagiaire Administratif</b> – Collège PieX – Châtelineau - (Juin 2022)</li>
+    <li> <b>Web Manager</b> – Récréation de Fran – Floreffe - (Novembre 2022)</li>
 </ul>
 </section>
 <section class="Connaissance_linguistiques">
