--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
 <ul>
     <li><a href="CV/community_manager.html" alt="CV de Community Manager">🌐<span>Community Manager</span></a>
 </li>
+<li><a href="CV/employé_de_services.html" alt="CV d'Employé de Services">💻​<span>Employé de Services</span></a>
+</li>
     <li><a href="portefolio.html" alt="portefolio">📚<span>Portefolio</span></a>
 </li>
 </ul>
