Ajout de l'optimisateur de site web (CV)

--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
 </li>
 <li><a href="CV/employé_de_services.html" alt="CV d'Employé de Services">💻​<span>Employé de Services</span></a>
 </li>
+<li><a href="CV/optimisateur_de_site_web.html" alt="CV d'Optimisateur de Site Web">🛠️​<span>Optimisateur de site web</span></a>
+</li>
     <li><a href="portefolio.html" alt="portefolio">📚<span>Portefolio</span></a>
 </li>
 </ul>
