Mise à jour de début juillet 2024
Ajout de réseau sur le portefolio et ajout de Mozilla Firefox dans le parcours.

--- a/portefolio.html
+++ b/portefolio.html
@@ -117,42 +117,6 @@
 <a href="https://www.behance.net/gallery/103840487/Chateau-de-La-Roche-en-Ardenne" class="projet">Château de La Roche-en-Ardenne</a>
 </article>
 </section>
-<!--La section Google Maps-->
-
-<h2> <img src="https://grafikart.fr/uploads/icons/google-maps.png" alt="Icone Google Maps" style="width:5vw" srcset="https://grafikart.fr/uploads/icons/google-maps.png"> Profil Google Maps</h2>
-<section class="gmaps">
-                <img src="https://lh3.googleusercontent.com/a/AGNmyxa_BgcJkRbCGTXGJVNyXX1pABnlPwK1bWwYX2AcfA=w60-h60-p-rp-mo-ba5-br100"
-                    alt="Profil Dzénetan Massart sur Google Maps"
-                    srcset="https://lh3.googleusercontent.com/a/AGNmyxa_BgcJkRbCGTXGJVNyXX1pABnlPwK1bWwYX2AcfA=w60-h60-p-rp-mo-ba5-br100">
-<h3>Dzénetan Massart</h3>
-                <p>Local Guide · Niveau 7</p>
-                <p>Points de Contributions</p>
-
-                <div class="progress_bar">
-                    <label for="gmpas">
-                        <kbd>0</kbd>
-                        <span>11 536</span>
-                        <kbd>15 000</kbd>
-                    </label>
-
-<progress id="gmaps" max="15000" value="11536"></progress>
-                </div>
-<a href="https://www.google.com/maps/contrib/110579370211725205652/reviews/@50.4497567,4.7780214,13z/data=!3m1!4b1!4m3!8m2!3m1!1e1?authuser=0"
-    target="_blank" rel="noopener noreferrer" class="lien">Voir le profil complet</a>
-</section>
-<!--La section LinkedIn-->
-
-<h2> <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="Icone LinkedIn" style="width:5vw; background-color: white;border-radius: 10%;"
-    srcset="https://cdn-icons-png.flaticon.com/512/174/174857.png"> Profil LinkedIn</h2>
-<section class="LinkedIn">
-        <img src="https://media.licdn.com/dms/image/D4E35AQHy2PTHLft41Q/profile-framedphoto-shrink_200_200/0/1686839083668?e=1713459600&v=beta&t=huLBfbkQhfnXqqyhREYC5rgavbVYuqja68EfpxX788w"
-        alt="Profil Dzénetan Massart"
-        srcset="https://media.licdn.com/dms/image/D4E35AQHy2PTHLft41Q/profile-framedphoto-shrink_200_200/0/1686839083668?e=1713459600&v=beta&t=huLBfbkQhfnXqqyhREYC5rgavbVYuqja68EfpxX788w">
-        <h3>Dzénetan Massart</h3>
-<p>647 abonnés - 635 relations</p>
-
-    <a href="https://www.linkedin.com/in/dzenetan-massart/" class="lien" target="_blank" rel="noopener noreferrer">Voir le profil complet</a>
-</section>
 <!--La section Behance-->
 <h2> 
     <svg alt="Icone Behance" style="width:5vw; border-radius: 10%;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24.247 15.985" aria-labelledby="IconBase-title-e35107a1-43b2-4a5a-a43c-b852ad4d30d9 IconBase-description-e35107a1-43b2-4a5a-a43c-b852ad4d30d9" role="graphics-symbol img" width="100%" height="100%" class="PrimaryNav-behanceLogo-jbj PrimaryNav-truncated-C4c" title="Behance" aria-hidden="true">
@@ -171,10 +135,59 @@ Profil Behance
         srcset="https://mir-s3-cdn-cf.behance.net/user/230/c9c830681896223.642e6ea89d797.jpg">
     <h3>Dzénetan Massart</h3>
     <div>
-        <p>Nombre de vues des projets: 142 | Appréciations: 8 | Abonnés: 1 | Abonnements: 14 </p>
+        <p>Nombre de vues des projets: 156 | Appréciations: 12 | Abonnés: 2 | Abonnements: 18 </p>
     </div>
     <a href="https://www.behance.net/dzenetan-massart" class="lien" target="_blank" rel="noopener noreferrer">Voir la gallerie complete</a>
 </section>
+<!--La section ArtStation-->
+<h2> <img src="https://pbs.twimg.com/profile_images/875415992679137280/9Z6AZoEO_400x400.jpg" alt="Icone ArtStation" style="width:5vw" srcset="https://pbs.twimg.com/profile_images/875415992679137280/9Z6AZoEO_400x400.jpg"> Profil ArtStation</h2>
+<section class="artstation">
+                <img src="https://cdn.artstation.com/artvsartist/dzenetan_massart"
+                    alt="Profil Dzénetan Massart sur ArtStation"
+                    srcset="https://cdn.artstation.com/artvsartist/dzenetan_massart">
+
+<a href="https://www.artstation.com/dzenetan_massart"
+    target="_blank" rel="noopener noreferrer" class="lien">Voir le profil complet</a>
+</section>
+<!--La section LinkedIn-->
+
+<h2> <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="Icone LinkedIn" style="width:5vw; background-color: white;border-radius: 10%;"
+    srcset="https://cdn-icons-png.flaticon.com/512/174/174857.png"> Profil LinkedIn</h2>
+<section class="LinkedIn">
+        <img src="assets/image/LinkedInPic.png"
+        alt="Profil Dzénetan Massart"
+        srcset="assets/image/LinkedInPic.png">
+        <h3>Dzénetan Massart</h3>
+<p>714 abonnés - 701 relations</p>
+
+    <a href="https://www.linkedin.com/in/dzenetan-massart/" class="lien" target="_blank" rel="noopener noreferrer">Voir le profil complet</a>
+</section>
+
+<!--La section Google Maps-->
+
+<h2> <img src="https://grafikart.fr/uploads/icons/google-maps.png" alt="Icone Google Maps" style="width:5vw" srcset="https://grafikart.fr/uploads/icons/google-maps.png"> Profil Google Maps</h2>
+<section class="gmaps">
+                <img src="https://lh3.googleusercontent.com/a/AGNmyxa_BgcJkRbCGTXGJVNyXX1pABnlPwK1bWwYX2AcfA=w60-h60-p-rp-mo-ba5-br100"
+                    alt="Profil Dzénetan Massart sur Google Maps"
+                    srcset="https://lh3.googleusercontent.com/a/AGNmyxa_BgcJkRbCGTXGJVNyXX1pABnlPwK1bWwYX2AcfA=w60-h60-p-rp-mo-ba5-br100">
+<h3>Dzénetan Massart</h3>
+                <p>Local Guide · Niveau 7</p>
+                <p>Points de Contributions</p>
+
+                <div class="progress_bar">
+                    <label for="gmpas">
+                        <kbd>0</kbd>
+                        <span>11 556</span>
+                        <kbd>15 000</kbd>
+                    </label>
+
+<progress id="gmaps" max="15000" value="11536"></progress>
+                </div>
+<a href="https://www.google.com/maps/contrib/110579370211725205652/reviews/@50.4497567,4.7780214,13z/data=!3m1!4b1!4m3!8m2!3m1!1e1?authuser=0"
+    target="_blank" rel="noopener noreferrer" class="lien">Voir le profil complet</a>
+</section>
+
+
 
 <!--La section YouTube-->
 <h2> 
