Intégration des annonces

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
     <meta property="twitter:title" content="Dzénetan Massart">
     <meta property="twitter:description" content="Le site web de Dzénetan Massart">
     <meta property="twitter:image" content="root/ico//android-icon-192x192.png">
+
+    <!-- Intégration des annonces -->
+     <link rel="stylesheet" href="assets/css/annonces.css">
 </head>
 
 <body>
@@ -98,6 +101,10 @@
             </p>
             <p>Entre-temps, ce site a évolué pour vous mettre en avant bien plus que tout ce qui touche au code en énumérant les différentes capacités que Dzénetan Massart vous propose à mettre à contribution pour vos projets.</p>
             <p>Depuis Novembre 2022, Dzénetan Massart est membre de la <a href="https://smartbe.be/fr/">Smart<sup><i class="fa-solid fa-link"></i></sup></a> pour les prestations.</p>
+        </div>
+        <div class="annonce">
+            <h2>UN PACK ADOBE PREMIERE PRO CS6</h2>
+            <p>Obtenez un pack gratuit pour améliorer votre bon vieux Adobe Premiere Pro CS6 (et ultérieur) à ce lien : <a href="https://github.com/DzenetanMassart/PPCS6-Pack-DM-001">https://github.com/DzenetanMassart/PPCS6-Pack-DM-001</a></p>
         </div>
         <div class="inline">
             <div class="logiciels ">
