Amélioration de l'index
Tri des capacités et des logiciels en fonction des métiers

--- a/index.html
+++ b/index.html
@@ -95,21 +95,20 @@
 
     <main >
         <h1>Bienvenue sur le site de Dzénetan Massart !</h1>
-        <div class="intro ">
+        <section class="intro ">
             <p>Ce site a été créé pendant <a href="https://becode.org/fr/" title="Renseignez-vous">la formation "BeCode"<sup><i class="fa-solid fa-link"></i></sup></a> et sert à tester les différentes capacités apprises lors de la formation par Dzénetan
                 Massart.
             </p>
             <p>Entre-temps, ce site a évolué pour vous mettre en avant bien plus que tout ce qui touche au code en énumérant les différentes capacités que Dzénetan Massart vous propose à mettre à contribution pour vos projets.</p>
             <p>Depuis Novembre 2022, Dzénetan Massart est membre de la <a href="https://smartbe.be/fr/">Smart<sup><i class="fa-solid fa-link"></i></sup></a> pour les prestations.</p>
-        </div>
-        <div class="annonce">
+        </section>
+        <section class="annonce">
             <h2>UN PACK ADOBE PREMIERE PRO CS6</h2>
             <p>Obtenez un pack gratuit pour améliorer votre bon vieux Adobe Premiere Pro CS6 (et ultérieur) à ce lien : <a href="https://github.com/DzenetanMassart/PPCS6-Pack-DM-001">https://github.com/DzenetanMassart/PPCS6-Pack-DM-001</a></p>
-        </div>
+        </section>
         <div class="inline">
-            <div class="logiciels ">
-            <span>Liste des logiciels et APIs que j'emplois pour créer ce site:</span>
-
+            <section class="logiciels ">
+            <h2>Liste des logiciels et APIs que j'emplois pour créer ce site:</h2>
             <ul>
                 <li>
                     <a href="https://code.visualstudio.com/Download">Visual Studio Code</a>
@@ -139,10 +138,9 @@
                     <a href="https://www.favicon-generator.org/">favicon-generator</a>
                 </li>
             </ul>
-        </div>
-        <div  class="technologies ">
-            <span> Liste des langages que j'emplois pour créer ce site:</span>
-
+        </section>
+        <section  class="technologies ">
+            <h2> Liste des langages que j'emplois pour créer ce site:</h2>
             <ul>
                 <li>
                     Français
@@ -166,104 +164,110 @@
                     JS
                 </li>
             </ul>
-        </div>
-        <div class="capacites ">
-            <span> Liste des capacités que je peux vous proposer</span>
-            <ul >
-                <li title="J'utilise donc Adobe Premiere et Adobe After Effect principalement">
-                    Montage-vidéo
-                </li>
-                <li title="J'utilise donc du papier et PaintDotNet/Adobe Photoshop">
-                    Storyboarding
-                </li>
-                <li title="J'utilise donc Adobe InDesign et Visual Studio Code">
-                    Design d'un CV <sup> (PDF et HTML) </sup>
-                </li>
-                <li title="J'utilise donc Audacity">
-                    Narration
-                </li>
-                <li title="J'utilise donc Adobe InDesign, PaintDotNet et Photoshop">
-                    Design d'interface
-                </li>
-                <li title="J'utilise donc mon appareil photo et PaintDotNet/Photoshop pour améliorer les rendus">
-                    Photographie de groupe <sup> (avec appareil photo numérique)</sup>
-                </li>
-                <li title="J'utilise donc Adobe Premiere">
-                    Dynamisation de vidéo <sup>(montage fast-cut)</sup>
-                </li>
-                <li title="J'utilise donc Visual Studio Code">
-                    Mise en place d'un design fantaisiste <sup>(HTML-CSS-JS)</sup>
-                </li>
-                <li title="J'utilise donc ABSOLUMENT TOUT">
-                    Aide à la mise en place d'un projet créatif <sup>(Moodboard + organisation)</sup>
-                </li>
-                <li title="J'utilise donc Adobe Illustrator et du papier">
-                    Création de logo unicolor
-                </li>
-                <li title="J'utilise donc Adobe Premiere">
-                    Dé-rusher video
-                </li>
-                <li title="J'utilise donc Adobe After Effect et Adobe Photoshop">
-                    Création de gif animé
-                </li>
-                <li title="J'utilise donc Audacity, OBS Studio et Adobe Premiere">
-                    Création de tutoriel <sup>(en voix off)</sup>
-                </li>
-                <li title="J'utilise donc ABSOLUMENT TOUT">
-                    Animation de communauté sur les réseaux sociaux <sup>(Community Managing)</sup>
-                </li>
-                <li title="J'utilise donc Google Maps et Google Earth">
-                    Enregistrement complet d'un commerce sur Google Maps <sup>(Community Managing)</sup>
-                </li>
-                <li title="J'utilise donc un scanner et ILovePDF">
-                                   Scanning <sup>(Employé de Services)</sup>
-                </li>
-                <li title="J'utilise donc l'explorateur ou une vraie bibliothèque">
-                Classement <sup>(Employé de Services)</sup>
-                </li>
-                <li title="J'utilise donc une imprimante et ILovePDF">
-                Impression <sup>(Employé de Services)</sup>
-                </li>
-                <li title="J'utilise donc mes mains et mes pieds pour mettre la lettre dans une boite rouge">
-                Mise sous enveloppe <sup>(Employé de Services)</sup>
-                </li>
-                <li title="J'utilise Microsoft Word ou équivalent">
-                    Rédaction<sup>(Employé de Services)</sup>
-                    </li>
-            </ul>
-        </div>
-        <div class="programmes" >
-            <span>Liste des logiciels que j'emplois</span>
-            <ul>
+        </section>
+        <section class="capacites ">
+            <h2> Liste des capacités que je peux vous proposer</h2>
+
+            <h3>Audiovisuel</h3>
+
+<ul class="c">
+    <li title="J'utilise donc Adobe Premiere et Adobe After Effect principalement">
+        Montage-vidéo
+    </li>
+    <li title="J'utilise donc du papier et PaintDotNet/Adobe Photoshop/Photopea">
+        Storyboarding
+    </li>
+    <li title="J'utilise donc Adobe Premiere Pro/Mon téléphone">
+        Narration
+    </li>
+    <li title="J'utilise donc Adobe Premiere Pro">
+        Dynamisation de vidéo <sup>(montage fast-cut)</sup>
+    </li>
+    <li title="J'utilise donc Adobe Premiere Pro">
+        Dé-rusher video
+    </li>
+    <li title="J'utilise donc Adobe After Effect et Adobe Photoshop">
+        Création de gif animé
+    </li>
+    <li title="J'utilise donc OBS Studio, mon téléphone et Adobe Premiere">
+        Création de tutoriel <sup>(en voix off)</sup>
+    </li>
+    <li title="J'utilise donc ABSOLUMENT TOUT">
+        Aide à la mise en place d'un projet créatif <sup>(Moodboard + organisation)</sup>
+    </li>
+</ul>
+
+<h3>Photographie</h3>
+<ul class="c">
+    <li title="J'utilise donc mon appareil photo et PaintDotNet/Photoshop/Photopea pour améliorer les rendus">
+        Photographie de groupe <sup> (avec appareil photo numérique)</sup>
+    </li>
+</ul>
+
+<h3>Aide à la recherche d'emploi</h3>
+<ul class="c">
+    <li title="J'utilise donc Adobe InDesign/Visual Studio Code/Canva">
+        Design d'un CV <sup> (PDF et HTML) </sup>
+    </li>
+</ul>
+
+<h3>Administration</h3>
+<ul class="c">
+    <li title="J'utilise donc un scanner et ILovePDF">
+        Scanning <sup>(Employé de Services)</sup>
+</li>
+<li title="J'utilise donc l'explorateur ou une vraie bibliothèque">
+Classement <sup>(Employé de Services)</sup>
+</li>
+<li title="J'utilise donc une imprimante et ILovePDF">
+Impression <sup>(Employé de Services)</sup>
+</li>
+<li title="J'utilise donc mes mains et mes pieds pour mettre la lettre dans une boite rouge">
+Mise sous enveloppe <sup>(Employé de Services)</sup>
+</li>
+<li title="J'utilise Microsoft Word ou équivalent">
+Rédaction<sup>(Employé de Services)</sup>
+</li>
+</ul>
+
+<h3>Community Managing</h3>
+<ul class="c">
+    <li title="J'utilise donc ABSOLUMENT TOUT">
+        Animation de communauté sur les réseaux sociaux <sup>(Community Managing)</sup>
+    </li>
+    <li title="J'utilise donc Google Maps et Google Earth">
+        Enregistrement complet d'un commerce sur Google Maps <sup>(Community Managing)</sup>
+    </li>
+</ul>
+
+<h3>Web developer</h3>
+<ul class="c">
+    <li title="J'utilise donc Adobe InDesign, PaintDotNet,Photoshop et Photopea">
+        Design d'interface
+    </li>
+    <li title="J'utilise donc Visual Studio Code">
+        Mise en place d'un design fantaisiste <sup>(HTML-CSS-JS)</sup>
+    </li>
+    <li title="J'utilise donc Adobe Illustrator et du papier">
+        Création de logo unicolor
+    </li>
+</ul>
+        </section>
+        <section class="programmes" >
+            <h2>Liste des logiciels que j'emplois</h2>
+            <span>            <h3>Audiovisuel</h3>
+                <h3 >Photographie</h3>
+                <h3 >Community Managing</h3></span>
+            </span>
+            <ul class="c">
                 <li>
                     Adobe Premiere Pro CS6 <sup>(amélioré avec des scripts)</sup>
-                </li>
-                <li>
-                    Adobe Photoshop CS6
-                </li>
-                <li>
-                    PaintDotNet <sup> (amélioré avec des plugins)</sup>
-                </li>
-                <li>
-                    Visual Studio Code <sup>(amélioré avec des plugins)</sup>
                 </li>
                 <li>
                     Adobe After Effect CS6
                 </li>
                 <li>
-                    Adobe Illustrator CS6
-                </li>
-                <li>
                     OBS Studio
-                </li>
-                <li>
-                    Microsoft Word
-                </li>
-                <li>
-                    Microsoft PowerPoint
-                </li>
-                <li>
-                    Microsoft Excel
                 </li>
                 <li>
                     Panzoid Clipmaker 2
@@ -272,28 +276,61 @@
                     Blender <sup>(amélioré avec des plugins)</sup>
                 </li>
                 <li>
+                    Adobe Photoshop CS6
+                </li>
+                <li>
+                    PaintDotNet <sup> (amélioré avec des plugins)</sup>
+                </li>
+                <li>
+                    Adobe Illustrator CS6
+                </li>
+                <li>
                     FireAlpaca
                 </li>
                 <li>
-                    Google Maps
-                </li>
-                <li>
-                    Google Docs
-                </li>
-                <li>
-                    Google Sheets
-                </li>
-                <li>
-                    ILovePDF
-                </li>
-                <li>
-                   Photopea
-                </li>
-                <li>
-                    Canva
+                    Photopea
                  </li>
             </ul>
-        </div>
+            <span>   <h3 style="width: 38%;" >Aide à la recherche d'emploi</h3>
+                <h3 >Administration</h3>
+                <h3 >Community Managing</h3></span>
+            <ul>
+
+
+             
+<ul class="c">
+    <li>
+        Microsoft Word
+    </li>
+    <li>
+        Microsoft PowerPoint
+    </li>
+    <li>
+        Microsoft Excel
+    </li>
+    <li>
+        Google Docs
+    </li>
+    <li>
+        Google Sheets
+    </li>
+    <li>
+        ILovePDF
+    </li>
+    <li>
+        Google Maps
+    </li>
+    <li>
+        Canva
+     </li>
+</ul>
+<span><h3>Web developer</h3></span>          
+<ul class="c">
+    <li>
+        Visual Studio Code <sup>(amélioré avec des plugins)</sup>
+    </li>
+    </ul>
+        </section>
         </div>
         </div>
     </main>
