Mise à jour de début septembre 2024
Amélioration de la page principale ainsi que du CV d'Employé de Services Administratifs

--- a/index.html
+++ b/index.html
@@ -96,15 +96,20 @@
     <main >
         <h1>Bienvenue sur le site de Dzénetan Massart !</h1>
         <section class="intro ">
-            <p>Ce site a été créé pendant <a href="https://becode.org/fr/" title="Renseignez-vous">la formation "BeCode"<sup><i class="fa-solid fa-link"></i></sup></a> et sert à tester les différentes capacités apprises lors de la formation par Dzénetan
+            <p>Ce site a été créé pendant <a href="https://becode.org/fr/" title="Renseignez-vous">la formation "BeCode"</a> et sert à tester les différentes capacités apprises lors de la formation par Dzénetan
                 Massart.
             </p>
             <p>Entre-temps, ce site a évolué pour vous mettre en avant bien plus que tout ce qui touche au code en énumérant les différentes capacités que Dzénetan Massart vous propose à mettre à contribution pour vos projets.</p>
-            <p>Depuis Novembre 2022, Dzénetan Massart est membre de la <a href="https://smartbe.be/fr/">Smart<sup><i class="fa-solid fa-link"></i></sup></a> pour les prestations.</p>
+            <p>Depuis Novembre 2022, Dzénetan Massart est membre de la <a href="https://smartbe.be/fr/">Smart</a> pour les prestations.</p>
         </section>
         <section class="annonce">
             <h2>UN PACK ADOBE PREMIERE PRO CS6</h2>
             <p>Obtenez un pack gratuit pour améliorer votre bon vieux Adobe Premiere Pro CS6 (et ultérieur) à ce lien : <a href="https://github.com/DzenetanMassart/PPCS6-Pack-DM-001">https://github.com/DzenetanMassart/PPCS6-Pack-DM-001</a></p>
+        </section>
+        <section class="annonce">
+            <h2>RECHERCHE DE STAGE DANS NAMUR ET CHARLEROI</h2>
+            <p>Je recherche un stage rénuméré en tant qu'Employé Administratif dans Namur et Charleroi.</p>
+            <p><a href="CV/employé_de_services.html">📑Mon CV publique se trouve ici</a> et vous pouvez <a href="mailto:dzenetan.massart@gmail.com">📧 me contacter ici</a></p>
         </section>
         <div class="inline">
             <section class="logiciels ">
@@ -255,10 +260,12 @@ Rédaction<sup>(Employé de Services)</sup>
         </section>
         <section class="programmes" >
             <h2>Liste des logiciels que j'emplois</h2>
-            <span>            <h3>Audiovisuel</h3>
-                <h3 >Photographie</h3>
-                <h3 >Community Managing</h3></span>
-            </span>
+            <h3>            
+                
+                <span>Audiovisuel</span>
+                <span >Photographie</span>
+                <span >Community Managing</span></span>
+            </h3>
             <ul class="c">
                 <li>
                     Adobe Premiere Pro CS6 <sup>(amélioré avec des scripts)</sup>
@@ -291,13 +298,11 @@ Rédaction<sup>(Employé de Services)</sup>
                     Photopea
                  </li>
             </ul>
-            <span>   <h3 style="width: 38%;" >Aide à la recherche d'emploi</h3>
-                <h3 >Administration</h3>
-                <h3 >Community Managing</h3></span>
-            <ul>
-
-
-             
+            <h3>   
+                <span>Aide à la recherche d'emploi</span>
+                <span >Administration</span>
+                <span >Community Managing</span>
+            </h3> 
 <ul class="c">
     <li>
         Microsoft Word
@@ -324,7 +329,8 @@ Rédaction<sup>(Employé de Services)</sup>
         Canva
      </li>
 </ul>
-<span><h3>Web developer</h3></span>          
+
+    <h3><span>Web developer</span></h3>         
 <ul class="c">
     <li>
         Visual Studio Code <sup>(amélioré avec des plugins)</sup>
