--- a/CV/employé_de_services.html
+++ b/CV/employé_de_services.html
@@ -93,31 +93,72 @@
 <!--Le main Debut-->
         <main>
 <section class="TitreCV">
-    <h1>Employé de Services</h1>
+    <h1>Employé de Services Administratifs</h1>
     <h2>Dzénetan MASSART</h2>
+</section>
+<section class="Experiences_professionnelles">
+    <h3>Expériences professionnelles</h3>
+<ul>
+<li> <b>Stagiaire Administratif</b> – École Maternelle du Séminaire de Floreffe – Floreffe - (Septembre 2023)</li>
+<li> <b>Web Manager</b> – Le Joyeux Carnavaleux – Namur - (2023)</li>
+<li> <b>Stagiaire Administratif</b> – Collège PieX – Châtelineau - (Juin 2022)</li>
+<li> <b>Web Manager</b> – Récréation de Fran – Floreffe - (Novembre 2022)</li>
+</ul>
 </section>
 <section class="Competences">
     <h3>Compétences</h3>
     <ul>
         <li>
-            Créer et diffuser du contenu sur les différents médias sociaux,
+            Dactylographie,
         </li>
         <li>
-            Animer et modérer les discussions des internautes,
+            Usage de tableur (exemple :Microsoft Excel),
 </li>
         <li>
-            Développer des stratégies de communication web et presse,
+            Usage de logiciel de traitement de texte (exemple :Microsoft Word),
 </li>
         <li>
-            Optimiser le référencement naturel d’un site Web,
+            Usage de logiciel de présentation par diapositive (exemple : Microsoft PowerPoint),
 </li>
         <li>
-            Réaliser des audits Web,
+            Classement,
 </li>
         <li>
-            Rédiger du contenu adapté pour le Web.
+            Numérisation et Impression
 </li>            
     </ul>
+</section>
+<section class="Connaissances_informatiques">
+    <h3>Connaissances informatiques</h3>
+<ul>
+<li>█ Suite Microsoft Office</li>
+<li> ❘Word ★★★★</li>
+<li> ❘Excel ★★★★</li>
+<li> ❘PowerPoint ★★★</li>
+<li>█ Suite Google</li>
+<li> ❘Docs ★★★</li>
+<li> ❘Sheets ★★★★</li>
+<li> ❘Slide ★</li>
+<li>█ Suite LibreOffice</li>
+<li> ❘Writer ★★★</li>
+<li> ❘Calc ★★</li>
+<li> ❘Impress ★</li>
+<li>█ Canva ★★★★</li>
+<li>█ Adobe InDesign ★★★</li>
+</ul>
+</section>
+<section class="Etudes">
+    <h3>Études</h3>
+<ul>
+<li><b>Employé de Services</b> - École des Cadets – Namur – (2021-2023)
+</li>
+<li><b>Community Manager</b> – CFD – Online – (2020-2021)
+</li>
+<li><b>Développement Web</b> -BeCode – Charleroi – (2019)
+</li>
+<li><b>Infographie</b>  – HEAJ – Namur – (2016-2019)
+</li>
+</ul>
 </section>
 <section class="Hobbies">
         <h3>Hobbies</h3>
@@ -133,67 +174,43 @@
         </ul>
 
 </section>
-<section class="Connaissances_informatiques">
-        <h3>Connaissances informatiques</h3>
-<ul>
-    <li>Microsoft Word</li>
-    <li>Microsoft Excel</li>
-    <li>Microsoft PowerPoint</li>
-    <li>Google Docs</li>
-    <li>Google Sheets</li>
-    <li>LibreOffice</li>
-</ul>
-</section>
-<section class="Etudes">
-        <h3>Études</h3>
-<ul>
-    <li><b>Employé de Services</b> - École des Cadets – Namur – (2021-2023)
-</li>
-    <li><b>Community Manager</b> – CFD – Online – (2020-2021)
-</li>
-    <li><b>Développement Web</b> -BeCode – Charleroi – (2019)
-</li>
-    <li><b>Infographie</b>  – HEAJ – Namur – (2016-2019)
-</li>
-</ul>
-</section>
-<section class="Experiences_professionnelles">
-        <h3>Expériences professionnelles</h3>
-<ul>
-    <li> <b>Stagiaire Administratif</b> – École Maternelle du Séminaire de Floreffe – Floreffe - (Septembre 2023)</li>
-    <li> <b>Web Manager</b> – Le Joyeux Carnavaleux – Namur - (2023)</li>
-    <li> <b>Stagiaire Administratif</b> – Collège PieX – Châtelineau - (Juin 2022)</li>
-    <li> <b>Web Manager</b> – Récréation de Fran – Floreffe - (Novembre 2022)</li>
-</ul>
-</section>
+
+
+
 <section class="Connaissance_linguistiques">
         <h3>Connaissances linguistiques</h3>
 <ul>
-    <li>Anglais technique</li>
-    <li>Français</li>
+    <li>Français : Langue Maternelle</li>
+    <li>Anglais technique (B1)</li>
+    <li>Néerlandais : Première section de Duolingo</li>
+</ul>
+</section>
+<section class="Qualites">
+    <h3>Qualitées</h3>
+<ul>
+<li>Curieux intellectuellement,
+</li>
+<li>Imaginatif,
+</li>
+<li>Procréatif,
+</li>
+<li>Communicatif.
+</li>
 </ul>
 </section>
 <section class="Coordonnees">
         <h3>Coordonnées</h3>
 <ul>
-    <li> <a href="mailto:dzenetan.massart@gmail.com" alt="envoyer un e-mail à Dzénetan Massart">dzenetan.massart@gmail.com</a>
+    <li> 
+        <a href="mailto:dzenetan.massart@gmail.com" alt="envoyer un e-mail à Dzénetan Massart">dzenetan.massart@gmail.com</a>
+</li>
+<li> 
+    <a href="https://www.linkedin.com/in/dzenetan-massart/" alt="LinkedIn de Dzénetan Massart">LinkedIn</a>
 </li>
 <p>Adresse et numéro de téléphone indisponible sur le site.</p>
 </ul>
 </section>
-<section class="Qualites">
-        <h3>Qualitées</h3>
-<ul>
-    <li>Curieux intellectuellement,
-</li>
-    <li>Imaginatif,
-</li>
-    <li>Procréatif,
-</li>
-    <li>Communicatif.
-</li>
-</ul>
-</section>
+
 </main>
 
 
