Amélioration du portefolio

--- a/portefolio.html
+++ b/portefolio.html
@@ -81,7 +81,7 @@
     <section class="sites">
 <article>
                 <h4>🧰 Tricks and Tips</h4>
-                <p>Un site web répertoriant de la documentation au sujet du dévellopement web dans divers langages,CMS,...</p>
+                <p>Un site web répertoriant de la documentation au sujet du développement web dans divers langages,CMS,...</p>
                <p>Projet commencé en 2019.</p>
                 <a target="_blank" href="https://dzenetanmassart.github.io/Tricks-and-Tips/" class="lien">S'y rendre</a>
             </article>
@@ -177,11 +177,11 @@ Profil Behance
                 <div class="progress_bar">
                     <label for="gmpas">
                         <kbd>0</kbd>
-                        <span>11 556</span>
+                        <span>11 847</span>
                         <kbd>15 000</kbd>
                     </label>
 
-<progress id="gmaps" max="15000" value="11536"></progress>
+<progress id="gmaps" max="15000" value="11847"></progress>
                 </div>
 <a href="https://www.google.com/maps/contrib/110579370211725205652/reviews/@50.4497567,4.7780214,13z/data=!3m1!4b1!4m3!8m2!3m1!1e1?authuser=0"
     target="_blank" rel="noopener noreferrer" class="lien">Voir le profil complet</a>
