--- a/CV/optimisateur_de_site_web.html
+++ b/CV/optimisateur_de_site_web.html
@@ -83,6 +83,9 @@
         <li><a href="        https://www.facebook.com/people/Dz%C3%A9netan-Massart/pfbid0M3U254AVG7XncCf1iriRqj2VPKVUWj54MBYEtwN8xNm6Jhf6RGa1vHM3FkRSdMd3l/
             " alt="Facebook">📇<span>Facebook</span></a>
         </li>
+        <li><a href="        https://www.instagram.com/dzenetan_massart/
+            " alt="Instagram">🖼️<span>Instagram</span></a>
+        </li>
         </ul>
         
         </details>
