--- a/index.html
+++ b/index.html
@@ -101,16 +101,11 @@
     <main>
         <h1>Bienvenue sur le site de Dzénetan Massart !</h1>
         <section class="intro ">
-            <p>Ce site a été créé pendant <a href="https://becode.org/fr/" title="Renseignez-vous">la formation "BeCode"</a> et sert à tester les différentes capacités apprises lors de la formation par Dzénetan
-                Massart.
+            <p>Ce site a été créé pendant <a href="https://becode.org/fr/" title="Renseignez-vous">la formation "BeCode"</a> et sert à tester les différentes capacités apprises lors de la formation par <a title="Dzénetan Massart">moi</a> .
             </p>
             <p>Entre-temps, ce site a évolué pour vous mettre en avant bien plus que tout ce qui touche au code en énumérant les différentes capacités que Dzénetan Massart vous propose à mettre à contribution pour vos projets.</p>
-            <p>Depuis Novembre 2022, Dzénetan Massart est membre de la <a href="https://smartbe.be/fr/">Smart</a> pour les prestations.</p>
-            <p>Depuis Août 2024, il est à la recherche d'un lieu de stage en administration.</p>
-        </section>
-        <section class="annonce">
-            <h2>UN PACK ADOBE PREMIERE PRO CS6</h2>
-            <p>Obtenez un pack gratuit pour améliorer votre bon vieux Adobe Premiere Pro CS6 (et ultérieur) à ce lien : <a href="https://github.com/DzenetanMassart/PPCS6-Pack-DM-001">https://github.com/DzenetanMassart/PPCS6-Pack-DM-001</a></p>
+            <p>Depuis Novembre 2022, je suis membre de la <a href="https://smartbe.be/fr/">Smart</a> pour les prestations.</p>
+            <p>Depuis Août 2024, je suis à la recherche d'un lieu de stage en administration.</p>
         </section>
         <style>
 /* ----------------------------------------------
@@ -140,7 +135,8 @@ transition: all 0.5s;
         </style>
         <section class="annonce">
             <h2>RECHERCHE DE STAGE DANS NAMUR ET CHARLEROI</h2>
-            <p>Je recherche un stage rénuméré en tant qu'Employé Administratif dans Namur et Charleroi.</p>
+            <p>Je recherche un stage rénuméré en tant qu'Employé Administratif dans Namur et Charleroi jusqu'au 31 mars 2026 pour 662,55€ par mois.</p> 
+                <p>Je fais ce stage autant pour en apprendre d'avantage sur l'administration que pour obtenir mon diplôme d'Employé Administratif à l'IFAPME de Namur.</p>
             <p><a href="mailto:dzenetan.massart@gmail.com"><img class="vibre" src="assets/image/Recherche de stage admin Décembre.png" alt="Recherche de stage administratif" srcset="assets/image/Recherche de stage admin Décembre.png"></a></p>
             <p><a href="CV/employé_de_services.html">📑Mon CV publique se trouve ici</a> et vous pouvez <a href="mailto:dzenetan.massart@gmail.com">📧 me contacter ici</a></p>
         </section>
@@ -323,7 +319,7 @@ transition: all 0.5s;
     </div>
     <div>
         <h3>Programmes</h3>
-        <span>Liste des logiciels que j'emplois :</span>
+        <p>Liste des logiciels que j'emplois :</p>
 
 <dl>
 <dt>Audiovisuel, Photographie et Community Managing</dt>
