--- a/index.html
+++ b/index.html
@@ -143,8 +143,7 @@ transition: all 0.5s;
 
 <section class="competences">
     <div>
-    <h3>Logiciels</h3>
-    <span>Liste des logiciels et APIs que j'emplois pour créer ce site:</span>
+    <h3>Logiciels et APIs utilisés par le site web</h3>
     <dl>
         <dt>Visual Studio Code : Permet de coder avec des couleurs et des automatismes</dt>
         <dd><a href="https://code.visualstudio.com/Download">https://code.visualstudio.com/Download</a></dd>
@@ -172,8 +171,7 @@ transition: all 0.5s;
       </dl>
     </div>
     <div>
-      <h3>Langages</h3>
-      <span>Liste des langages que j'emplois pour créer ce site:</span>
+      <h3>Langages utilisés par le site web</h3>
 
       <dl>
         <dt>Langues parlées</dt>
@@ -187,10 +185,6 @@ transition: all 0.5s;
             </li>
         </ul>
         </dd>
-
-
-</dl>
-    <dl>
     <dt>Langages de programmation, de balisage, ...</dt>
     <dd>
 <ul>
@@ -216,9 +210,7 @@ transition: all 0.5s;
         
 </div>
 <div>
-    <h3>Capacités</h3>
-    <span>Liste des capacités que je peux vous proposer :</span>
-
+    <h3>Capacités que je peux proposer</h3>
     <dl>
         <dt>Audiovisuel</dt>
         <dd>
@@ -318,8 +310,7 @@ transition: all 0.5s;
         </dl>
     </div>
     <div>
-        <h3>Programmes</h3>
-        <p>Liste des logiciels que j'emplois :</p>
+        <h3>Logiciels que j'emplois</h3>
 
 <dl>
 <dt>Audiovisuel, Photographie et Community Managing</dt>
